complete Giáo Viên + Phòng Học

--- a/UI/LopHoc/FormLichHoc.form
+++ b/UI/LopHoc/FormLichHoc.form
@@ -155,17 +155,24 @@
                               <Component id="ckT2" alignment="0" min="-2" pref="71" max="-2" attributes="0"/>
                               <Component id="ckT3" alignment="0" min="-2" pref="71" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="pnBay" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnSau" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnHai" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnBa" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnTu" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnNam" alignment="0" max="32767" attributes="0"/>
-                              <Component id="pnCn" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                                  <Component id="pnHai" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="pnTu" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pnBa" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pnNam" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pnSau" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pnBay" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pnCn" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
-                          <EmptySpace pref="326" max="32767" attributes="0"/>
+                          <EmptySpace pref="11" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -207,7 +214,7 @@
                               <Component id="pnCn" alignment="0" max="32767" attributes="0"/>
                               <Component id="ckCn" alignment="0" min="-2" pref="87" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="55" max="32767" attributes="0"/>
+                          <EmptySpace pref="76" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -216,7 +223,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT2">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 2"/>
                   </Properties>
@@ -227,7 +234,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT3">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 3"/>
                   </Properties>
@@ -238,7 +245,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT4">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 4"/>
                   </Properties>
@@ -249,7 +256,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT5">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 5"/>
                   </Properties>
@@ -260,7 +267,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT7">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 7"/>
                   </Properties>
@@ -271,7 +278,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckT6">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Th&#x1ee9; 6"/>
                   </Properties>
@@ -282,7 +289,7 @@
                 <Component class="javax.swing.JCheckBox" name="ckCn">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="f5" red="e6" type="rgb"/>
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="CN"/>
                   </Properties>
@@ -1433,12 +1440,12 @@
                                   </Group>
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="21" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel40" min="-2" max="-2" attributes="0"/>
                                   <Component id="cbGvT6" min="-2" pref="186" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="21" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="cbPhongT6" alignment="0" min="-2" pref="85" max="-2" attributes="0"/>
                                   <Component id="jLabel41" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -2336,6 +2343,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="66" green="0" red="0" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Danh S&#xe1;ch Ng&#xe0;y Ngh&#x1ec9;"/>
           </Properties>
         </Component>
