--- a/UI/LopHoc/pnLocThu.form
+++ b/UI/LopHoc/pnLocThu.form
@@ -5,6 +5,13 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="f5" red="e6" type="rgb"/>
     </Property>
+    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+      <Border info="org.netbeans.modules.form.compat2.border.MatteColorBorderInfo">
+        <MatteColorBorder>
+          <Color PropertyName="color" blue="cc" green="cc" red="cc" type="rgb"/>
+        </MatteColorBorder>
+      </Border>
+    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[347, 30]"/>
     </Property>
@@ -40,7 +47,7 @@
               <Component id="ckT6" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
               <Component id="ckT7" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="9" max="32767" attributes="0"/>
+              <EmptySpace pref="7" max="32767" attributes="0"/>
               <Component id="ckCn" min="-2" pref="39" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -48,17 +55,22 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="ckT2" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="ckT4" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="ckT3" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="ckT5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ckT6" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ckT7" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ckCn" alignment="3" min="-2" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="ckT2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="ckT3" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="ckT5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ckT6" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ckT7" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ckCn" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="ckT4" min="-2" pref="25" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,6 +82,12 @@
           <Color blue="ff" green="f5" red="e6" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="T2"/>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[37, 25]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[37, 25]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ckT2ActionPerformed"/>
@@ -81,6 +99,12 @@
           <Color blue="ff" green="f5" red="e6" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="T4"/>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[37, 25]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[37, 25]"/>
+        </Property>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ckT4ActionPerformed"/>
