--- a/UI/UI_Main.form
+++ b/UI/UI_Main.form
@@ -7,9 +7,6 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1366, 768]"/>
     </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1366, 768]"/>
-    </Property>
     <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1366, 768]"/>
     </Property>
@@ -83,7 +80,7 @@
                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                   <Component id="btnLopHoc" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
-                  <Component id="btnThoiKhoaBieu" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnGiaoVienPhong" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                   <Component id="btnChuongTrinh" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
@@ -100,7 +97,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnKhachHang" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnLopHoc" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="btnThoiKhoaBieu" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Component id="btnGiaoVienPhong" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnChuongTrinh" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnTaiKhoan" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnThongKe" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
@@ -324,7 +321,7 @@
             <Property name="text" type="java.lang.String" value="Ng&#xe0;y"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="btnThoiKhoaBieu">
+        <Component class="javax.swing.JButton" name="btnGiaoVienPhong">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="99" green="ff" red="99" type="rgb"/>
@@ -349,7 +346,7 @@
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThoiKhoaBieuActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGiaoVienPhongActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnDangXuat">
