--- a/UI/LopHoc/ChiTietLopHoc/UI_ChiTietLop.form
+++ b/UI/LopHoc/ChiTietLopHoc/UI_ChiTietLop.form
@@ -54,6 +54,10 @@
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
+                          <Component id="jspLH" min="-2" pref="636" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
                           <Component id="jTextArea1" min="-2" pref="571" max="-2" attributes="0"/>
                           <EmptySpace pref="275" max="32767" attributes="0"/>
                           <Component id="btnUpdateLop" min="-2" pref="60" max="-2" attributes="0"/>
@@ -63,10 +67,9 @@
                           <Component id="btnThemLop" min="-2" pref="60" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="btnXoaLop" min="-2" pref="60" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jspLH" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
